testcases/error/duplicated_identifier_raw.veryl
module duplicated_identifier_raw {
    var _a: logic;
    var r#_a: logic;
}
